LORENZO:

fluent interface for JointTrajectoryPoint
fluent interface for JointTrajectory

removed coordination.Header, since it's just the same as the one taken from Ros: ros.msgs.std_msgs.Header